<resources>
    <string name="app_name">ultima</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Facebook</string>
    <string name="menu_slideshow">Página oficial</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">compartir</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_borrar">borrar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_borrame">borrame</string>
    <string name="title_activity_eliminame_we">eliminame_we</string>
</resources>
