<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/web"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/facebook"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/logo"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/elimi"
            android:icon="@drawable/even"
            android:title="prueba"
         />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/programs"
            android:title="Programas"
            />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/developer"
                android:title="Desarrollador" />

        </menu>
    </item>

</menu>
